# NLP-AI-Search-Engine

./: .dockerignore  .editorconfig  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  ReadMe.md  app.py  cli.py  pyproject.toml  requirements.txt
data/sample_docs/: evaluation_metrics.txt  information_retrieval.txt  machine_learning.txt  natural_language_processing.txt  porter_stemmer.txt  tf_idf_and_bm25.txt  word_embeddings.txt
examples/: eval_demo.py  json_corpus.json  python_api.py
index_data/: engine.pkl
scripts/: _pdf_blocks.py  _pdf_doc.py  _pdf_math.py  _pdf_styles.py  build_docs.py  build_index.py
scripts/articles/: api.py  architecture.py  development.py  meta.py  ranking.py  readme.py
src/: __init__.py  analytics.py  autocomplete.py  bm25.py  cache.py  config.py  document.py  document_loader.py  indexer.py  logger.py  metrics.py  persistence.py  preprocessing.py  query_processor.py  ranker.py  search_engine.py  semantic_search.py  snippet.py  spell_check.py  tfidf.py  utils.py
static/css/: base.css  components.css  home.css  results.css
static/js/: app.js
templates/: about.html  base.html  index.html  results.html
templates/_partials/: search_form.html
tests/: conftest.py  test_indexer.py  test_metrics.py  test_preprocessing.py  test_search.py
